--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -9,6 +9,15 @@ http://java.sun.com/xml/ns/javaee/web-app_3_0.xsd"
         <servlet-name>HelloServlet</servlet-name>
         <servlet-class>com.tapiwa.learn.java.ee.HelloWorldServlet</servlet-class>
     </servlet>
+    <servlet>
+        <servlet-name>bank-accounts</servlet-name>
+        <servlet-class>com.tapiwa.learn.java.ee.BankAccountServlet</servlet-class>
+    </servlet>
+
+    <servlet-mapping>
+        <servlet-name>bank-accounts</servlet-name>
+        <url-pattern>/bank-accounts</url-pattern>
+    </servlet-mapping>
     <servlet-mapping>
         <servlet-name>HelloServlet</servlet-name>
         <url-pattern>/hello</url-pattern>
