--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -1,3 +1,5 @@
+<!--
+
 <web-app xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
          xmlns="http://java.sun.com/xml/ns/javaee"
          xmlns:web="http://java.sun.com/xml/ns/javaee/web-app_3_0.xsd"
@@ -10,12 +12,12 @@ http://java.sun.com/xml/ns/javaee/web-app_3_0.xsd"
         <servlet-class>com.tapiwa.learn.java.ee.HelloWorldServlet</servlet-class>
     </servlet>
     <servlet>
-        <servlet-name>bank-accounts</servlet-name>
+        <servlet-name>bankAccountServlet</servlet-name>
         <servlet-class>com.tapiwa.learn.java.ee.BankAccountServlet</servlet-class>
     </servlet>
 
     <servlet-mapping>
-        <servlet-name>bank-accounts</servlet-name>
+        <servlet-name>bankAccountServlet</servlet-name>
         <url-pattern>/bank-accounts</url-pattern>
     </servlet-mapping>
     <servlet-mapping>
@@ -23,3 +25,5 @@ http://java.sun.com/xml/ns/javaee/web-app_3_0.xsd"
         <url-pattern>/hello</url-pattern>
     </servlet-mapping>
 </web-app>
+
+-->
