--- a/pom.xml
+++ b/pom.xml
@@ -6,6 +6,7 @@
   <groupId>com.tapiwa.learn.java.ee</groupId>
   <artifactId>learn-java-ee</artifactId>
   <version>1.0-SNAPSHOT</version>
+  <packaging>war</packaging>
 
   <name>learn-java-ee</name>
   <!-- FIXME change it to the project's website -->
@@ -78,8 +79,8 @@
           <version>3.3.0</version>
         </plugin>
         <plugin>
-          <artifactId>maven-jar-plugin</artifactId>
-          <version>3.4.2</version>
+          <artifactId>maven-war-plugin</artifactId>
+          <version>3.3.1</version>
         </plugin>
         <plugin>
           <artifactId>maven-install-plugin</artifactId>
